--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#6EFFE9</color>
+    <color name="skyBlue">#54AFF5</color>
+    <color name="peri">#DBDFEA</color>
+    <color name="periBlue">#7BABED</color>
 </resources>
